# backend

./: .babelrc  .dockerignore  .eslintrc.js  .gitignore  .gitmodules  .merlin  .scalafmt.conf  Dockerfile  Dockerfile-backend.dev  Dockerfile-frontend.dev  Dockerfile-logic.dev  Dockerfile.prod  LICENSE  README  README.md  bsconfig.json  build.sbt  docker-compose.dev.yml  docker-compose.yml  elm.json  nginx.conf  package-lock.json  package.json  webpack.config.js
.github/workflows/: build.yml
app/: AuthAction.scala  Module.scala
app/controllers/: AssetController.scala  Auth.scala  AuthAction.scala  BattleController.scala  BoardController.scala  CreateRobotForm.scala  HomeController.scala  LoginForm.scala  RobotController.scala  SeasonController.scala  SignupForm.scala  UpdateRobotCodeForm.scala  UserController.scala
app/db/: Database.scala  JodaUtils.scala  PostgresEnums.scala  PostgresProfile.scala
app/filters/: WasmFilter.scala
app/forms/: CreateBoardForm.scala  CreateRobotForm.scala  JoinBoardForm.scala  LoginForm.scala  PasswordResetForm.scala  PublishForm.scala  SignupForm.scala  UpdatePasswordForm.scala  UpdateRobotCodeForm.scala  UpdateRobotForm.scala  UpdateUserForm.scala  Validators.scala
app/matchmaking/: AwsQueue.scala  BattleQueue.scala  MatchMaker.scala  MockQueue.scala
app/models/: Battles.scala  Boards.scala  DefaultCode.scala  JodaUtils.scala  Matches.scala  Paginate.scala  PasswordResets.scala  PublishedRobots.scala  QuillUtils.scala  Robots.scala  Schema.scala  Seasons.scala  User.scala  (+3 more)
backend/: .gitignore  README.md  mix.exs
backend-2/: build.sbt
conf/: application.conf  flyway.dev.conf  logback.xml  matchmaker-testing.sc  routes  variables.tf
css/: app.scss
deploy/: disable-aa.sh  install-docker.sh  install-fish.sh  post-receive
docker/: Dockerfile-frontend.dev  Dockerfile-logic.dev  Dockerfile.prod  docker-compose.dev.yml  docker-compose.prod.yml
frontend/: .babelrc  elm.json  index.html  package.json  webpack.config.js
logic/: .merlin  dune-project  frontend.ml  logic.ml
logic-src/: .merlin  dune  logic.atd  logic.ml  logic_j.ml  logic_j.mli  logic_t.ml  main.ml  server.ml  web.ml
public/: index.html
src/: .babelrc  .eslintrc.js  .prettierignore  Main.elm  app.js  elm.json  package.json  webpack.config.js  webpack.config.worker.js
tf-conf/: main.tf  variables.tf
tf-conf-dev/: main.tf  variables.tf
web-src/: Decode.elm  Main.elm  Ports.elm  app.js  codemirror.js  ports.elm  robotLib.raw.js
(+226 files in other folders)
