(executable
  (name main)
  (libraries js_of_ocaml base atdgen)
  (preprocess (pps js_of_ocaml-ppx)))

(rule
  (targets web.js)
  (action
    (run %{bin:js_of_ocaml} --noruntime %{lib:js_of_ocaml-compiler:runtime.js}
         --source-map %{dep:main.bc} -o %{targets} --pretty)))

(alias
  (name web)
  (deps web.js))

(alias
  (name server)
  (deps server.exe))


(rule
 (targets logic_j.ml
          logic_j.mli)
 (deps    logic.atd)
 (action  (run atdgen -j -j-std %{deps})))

(rule
 (targets logic_t.ml
          logic_t.mli)
 (deps    logic.atd)
 (action  (run atdgen -t %{deps})))
